- Fixed issue with library project names containing characters that aren't compatible with Eclipse path variable. The link between the main project and the library would fail to create.
- Added support for library projects that don't have a source folder called "src". There is now support for any number of source folder, with no name restriction. They can even be in sub folder such as "src/java".
- added support for new resource qualifiers: car/desk, night/notnight and navexposed/navhidden

0.9.7:
- Support for library projects
- Updated Property panel for Android project to edit library dependencies.

0.9.6:
- Editing default.properties outside of eclipse will automatically update the project
- Fix issue when launching ADT the first time with the SDK Usage panel that could create a deadlock between modal dialogs
- Launched applications from ADT now behave as if they were clicked from the Home screen of the emulator.
- AVD creation dialog now enforce sd card of 9MB or higher
- Fixed issue where add-on with no optional library would not show up as valid targets for application launches.
- Loads the SDK content only when a project requires it. This will make Eclipse use less resources when the SDK contains many versions of Android.
- DDMS plug-in now contains the Allocation Tracker view.
- Lots of fixes in the configuration selector of the Visual Layout Editor.
- Explode mode in the Visual Layout Editor adds a margin to all layout objects so that it's easier to see embedded layouts
- Outline mode in the Visual Layout Editor draws layout outline to make it easier to see layout objects.
- Fixed issues with the New Project Wizard when selecting samples.
- Fixed possible crash when launching applications
- New action in the Logcat view: "Go to problem" lets you go directly from an exception trace output to the code.

0.9.5:
- misc fixes in the SDK Updater

0.9.4:
- New "Create project from sample" choice in the New Project Wizard.
- Improvements to the SDK Updater.