@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="libs/jfreechart-1.0.9.jar"/>
 	<classpathentry kind="lib" path="libs/jcommon-1.0.12.jar"/>
 	<classpathentry kind="lib" path="libs/jfreechart-1.0.9-swt.jar"/>
-	<classpathentry kind="lib" path="libs/ddmlib.jar"/>
-	<classpathentry kind="lib" path="libs/ddmuilib.jar"/>
+	<classpathentry kind="lib" path="libs/ddmlib.jar" sourcepath="/ddmlib"/>
+	<classpathentry kind="lib" path="libs/ddmuilib.jar" sourcepath="/ddmuilib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
