@@ -1,6 +1,7 @@
 0.9.8:
 - Fixed issue with library project names containing characters that aren't compatible with Eclipse path variable. The link between the main project and the library would fail to create.
 - Added support for library projects that don't have a source folder called "src". There is now support for any number of source folder, with no name restriction. They can even be in sub folder such as "src/java".
+- Added support for libraries with library dependencies.
 - added support for new resource qualifiers: car/desk, night/notnight and navexposed/navhidden
 
 0.9.7:
